--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {margin: 15px;}
 @media (min-width: 992px) {
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
         float: left;
-        border: 1px solid black;
+        border: 1px solid yellow;
     }
 
     .col-lg-1 {
@@ -58,7 +58,7 @@ body {margin: 15px;}
 @media (min-width: 768px) and (max-width: 991px) {
     .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
         float: left;
-        border: 1px solid black;
+        border: 1px solid red;
     }
 
     .col-md-1 {
