--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,13 @@ body {margin: 15px;}
     width: 100%
 }
 
+.section_title {
+    position: absolute;
+    top: 10px;
+    bottom: 10px;
+    background-color: lightgreen;
+}
+
 /**** DESKTOPS ***/
 @media (min-width: 992px) {
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
