--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {margin: 15px;}
 .section_title {
     position: absolute;
     top: 10px;
-    bottom: 10px;
+    right: 10px;
     background-color: lightgreen;
 }
 
