Section title fix #3;

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,9 @@ body {margin: 15px;}
 
 .section_title {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 0;
+    right: 0;
+    width: 300;
     background-color: lightgreen;
 }
 
