--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {margin: 15px;}
 }
 
 .section_title {
-    position: absolute;
+    position: relative;
     top: 0;
     right: 0;
     width: 300;
