--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {margin: 15px;}
     position: relative;
     top: 0;
     right: 0;
-    width: 300px;
+    width: 25%;
     background-color: lightgreen;
 }
 
