--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,12 @@ body {margin: 15px;}
 }
 
 .section_title {
-    position: relative;
+    position: absolute;
     top: 0;
     right: 0;
     width: 25%;
     background-color: lightgreen;
+    text-align: center;
 }
 
 /**** DESKTOPS ***/
