--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -1,1 +1,99 @@
-body {margin: 15px;}
+/***** Generic styling *****/
+* {
+    box-sizing: border-box;
+    font-family: "Lucida Sans"
+}
+
+h1  {
+    text-align: center;
+    font-size: 175%;
+}
+
+div {
+    position: relative;
+    }
+    
+p {
+        float: left;
+        }
+    
+
+.row {
+    width: 100%;
+    }
+
+.section_title {
+    width: 25%;
+    background-color: lightgreen;
+    text-align: center;
+    font-size: 125%;
+    position: absolute;
+    top: -1.33em;
+    right: 0;
+    border: 1px solid black;
+}
+
+#chicken {
+    background-color: lightcoral;
+    }
+
+#beef {
+    background-color: darkred;
+    color: white;
+    }
+
+#sushi {
+    background-color: khaki
+}
+
+/**** DESKTOPS ***/
+@media (min-width: 992px) {
+    .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+        float: left;
+        background-color: gray;
+        padding: 20px;
+        border: 1px solid black;
+        }
+
+    .col-lg-4 {
+        width: 31.01%;
+        margin: 1.16%
+    }
+}
+
+/**** TABLETS ***/
+@media (min-width: 768px) and (max-width: 991px) {
+    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+        float: left;
+        background-color: gray;
+        padding: 20px;
+        margin: 20px;
+        border: 1px solid black;
+    }
+
+    .col-md-6 {
+        width: 47.68%;
+        margin: 1.16%;
+    }
+
+    .col-md-12 {
+        width: 97.68%;
+        margin: 1.16%;
+    }
+}
+
+/**** MOBILE PHONES ***/
+@media (max-width: 767px) {
+    .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+        float: left;
+        background-color: gray;
+        padding: 20px;
+        margin: 20px;
+        border: 1px solid black;
+    }
+
+    .col-sm-12 {
+        width: 97.68%;
+        margin: 1.16%;
+    }
+}
